--- a/latex/references.bib
+++ b/latex/references.bib
@@ -183,6 +183,16 @@
 	title = {A practical guide to support vector classification},
 	howpublished= {\url{http://www.csie.ntu.edu.tw/~cjlin/papers/guide/guide.pdf}, visited 12th of June 2012}
 }
+@article{keerthi2003asymptotic,
+  title={Asymptotic behaviors of support vector machines with Gaussian kernel},
+  author={Keerthi, S.S. and Lin, C.J.},
+  journal={Neural computation},
+  volume={15},
+  number={7},
+  pages={1667--1689},
+  year={2003},
+  publisher={MIT Press}
+}
 
 
 
